Take r313504 into account when recomputing the string table length.

When we encounter a USDT probe in a weak symbol, we emit an alias for
the probe function symbol. Such aliases are named differently from the
aliases we emit for probes in local functions, so make sure to take that
difference into account when resizing the output object file's string
table. Otherwise, we underrun the string table buffer.

PR:		223680


git-svn-id: svn+ssh://svn.freebsd.org/base/head@325886 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f